--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,28 @@
+HEAD
 #Wird bei jedem start und mousklick erzeugt
 sudos.txt
 
 # Ignore Gradle project-specific cache directory
 .gradle
 
-# Ignore Gradle build output directory
-build
+# Gradle files
+.gradle/
+build/
+ d88f0e0 (Initial commit: Setup project structure and ignore rules)
 
+# Stop ignoring these specific files even if they are in a build folder
+!gradle-wrapper.jar
+
+# NetBeans specific
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# OS specific
+.DS_Store
+thumbs.db
 #ignore sudos Textdatei sie wird jedesmal neu erzeugt
 sudos.txt
  
