--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,20 @@
-# Ignore Gradle project-specific cache directory
-.gradle
+# Gradle files
+.gradle/
+build/
 
-# Ignore Gradle build output directory
-build
+# Stop ignoring these specific files even if they are in a build folder
+!gradle-wrapper.jar
 
+# NetBeans specific
+nbproject/private/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+
+# OS specific
+.DS_Store
+thumbs.db
 #ignore sudos Textdatei sie wird jedesmal neu erzeugt
 sudos.txt
  
