--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Java CI mit Gradle
+name: Sudoku Build Pipeline
 
 on:
   push:
@@ -6,16 +6,19 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  Vorbereitung:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4  # Holt deinen Code von GitHub
-    
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        
-    - name: Gradle Build ausfuehren
-      run: ./gradlew build || echo "Gradle Datei nicht gefunden, ueberspringe..."
+      - run: echo "Initialisiere Build..."
+
+  Build:
+    needs: Vorbereitung  # Dies erzeugt die Linie im Graphen!
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - run: echo "Hier wuerde Gradle bauen..."
